@@ -127,13 +127,30 @@ public class UserAccessKeyFilter implements Filter {
 			}
 
 			if (provider != null) {
-				SocialPropertiesUtil socialData = SocialPropertiesUtil.getInstance();
+				AuthProvider providerAuthObject = null;
+				try {
+					providerAuthObject = AuthProvider.valueOf(provider);
+				} catch (Exception e) {
+					classLogger.warn(
+							"User is attempting to login using bearer token for provider '{}' but provider does not exist",
+							provider);
+					arg2.doFilter(arg0, arg1);
+					return;
+				}
 
-				Map<String, Boolean> loginsMap = socialData.getLoginsAllowed();
-				Boolean providerLogin = loginsMap.get(provider.toLowerCase());
-				if (providerLogin == null || !providerLogin) {
-					classLogger.warn("User is attempting to login using bearer token for provider '" + provider
-							+ "' but provider either does not exist or login is not allowed");
+				SocialPropertiesUtil socialData = SocialPropertiesUtil.getInstance();
+				boolean loginAllowed = false;
+				List<Map<String, Object>> loginsMap = socialData.getAvailableProviders();
+				for (Map<String, Object> login : loginsMap) {
+					if (login.get("label").equals(providerAuthObject.getLabel())) {
+						loginAllowed = true;
+						break;
+					}
+				}
+				if (!loginAllowed) {
+					classLogger.warn(
+							"User is attempting to login using bearer token for provider '{}' but login is not allowed",
+							provider);
 					arg2.doFilter(arg0, arg1);
 					return;
 				}
@@ -142,15 +159,15 @@ public class UserAccessKeyFilter implements Filter {
 				String tokenFillerClass = thisProvider.getTokenFillerClass();
 				if (tokenFillerClass == null) {
 					classLogger.warn(
-							"Attempting to login using access token but this functionality is not implemented for auth provider "
-									+ thisProvider.getLabel());
+							"Attempting to login using access token but this functionality is not implemented for auth provider {}",
+							thisProvider.getLabel());
 					arg2.doFilter(arg0, arg1);
 					return;
 				}
 
 				try {
 					IAccessTokenFiller thisTokenFiller = (IAccessTokenFiller) Class.forName(tokenFillerClass)
-							.newInstance();
+							.getConstructor().newInstance();
 					String prefix = thisProvider.getLabel().toLowerCase() + "_";
 					String userInfoURL = socialData.getProperty(prefix + "userinfo_url");
 					// "name","id","email"
@@ -177,7 +194,8 @@ public class UserAccessKeyFilter implements Filter {
 					// now store in the session
 					UserResource.addAccessToken(accessToken, request, autoAdd);
 				} catch (Exception e) {
-					classLogger.error(Constants.STACKTRACE, e);
+					classLogger.error("Error filling access token for bearer authentication with provider '{}'",
+							thisProvider.getLabel(), e);
 				}
 			}
 		} else if (authValue.startsWith("Basic") || authValue.startsWith("basic")) {
@@ -192,19 +210,16 @@ public class UserAccessKeyFilter implements Filter {
 					String accessKey = split[0];
 					String secretKey = split[1];
 
-					try {
-						user = SecurityUserAccessKeyUtils.validateKeysAndReturnUser(accessKey, secretKey);
-					} catch (IllegalAccessException e) {
-						classLogger.error(Constants.STACKTRACE, e);
-					}
-					if (user == null) {
-						classLogger.error("User could not login using user access key '" + accessKey
-								+ "' with invalid secret key");
-					}
-
 					AccessToken token = null;
-					if (user != null) {
-						token = user.getPrimaryLoginToken();
+					try {
+						token = SecurityUserAccessKeyUtils.validateKeysAndReturnToken(accessKey, secretKey);
+					} catch (IllegalAccessException e) {
+						classLogger.error("Error validating user access key '{}' against secret key", accessKey, e);
+					}
+					if (token == null) {
+						classLogger.error("User could not login using user access key '{}' with invalid secret key",
+								accessKey);
+					} else {
 						// let us make sure this login type is still allowed to login via access/secret
 						// key
 						{
@@ -212,21 +227,19 @@ public class UserAccessKeyFilter implements Filter {
 							boolean accessKeysAllowed = SocialPropertiesUtil.getInstance().accessKeysAllowed(provider);
 							if (!accessKeysAllowed) {
 								classLogger.error(
-										"User is trying to login using access/secret key but administrator has disabeled for provider "
-												+ provider.name());
+										"User is trying to login using access/secret key but administrator has disabeled for provider {}",
+										provider.name());
 								user = null;
 								token = null;
 							}
 						}
 					}
 
-					if (user != null && token != null) {
+					if (token != null) {
 						SecurityUserAccessKeyUtils.updateAccessTokenLastUsed(accessKey);
-						session = request.getSession(true);
-						session.setAttribute(Constants.SESSION_USER, user);
-						session.setAttribute(Constants.SESSION_USER_ID_LOG, token.getId());
-						classLogger.info(
-								"User is logging in with provider " + token.getProvider() + " with user access key");
+						UserResource.addAccessToken(token, request, false);
+						classLogger.info("User is logging in with provider {} with user access key",
+								token.getProvider());
 					}
 				}
 			}
